--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% if name %}
     <h1>Hello {{ name }}!</h1>
 {% else %}
-    <h1>Hello, World!</h1>
+    <h1>Hello, World! id = {{ id }}</h1>
 {% endif %}
 
 {% for row in data %}
