--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <title>Hello from Flask</title>
 {% if name %}
-    <h1>Hello {{ name }}!</h1>
+    <h1>Hello {{ name }} id = {{ id }}!</h1>
 {% else %}
     <h1>Hello, World! id = {{ id }}</h1>
 {% endif %}
 
-{% for row in data %}
-    <li><h2>{{ row[0] }}</h2>{{ row[1] }}
+{% for biere in bieres %}
+    <li><h2>{{ biere[0] }}</h2>{{ biere[1] }}
         {% else %}
     <li><em>Unbelievable. No entries here so far</em>
 {% endfor %}
