--- a/templates/login.html
+++ b/templates/login.html
@@ -2,20 +2,20 @@
 </head>
 <body>
 
-<form id="login_form" method="post" action="/login">
+<form id="connexion_form" method="post" action="/connexion">
     <div>
-        <label for="username"><b>Utilisateur</b></label>
-        <input type="text" placeholder="Entrer votre nom dutilisateur" id="username" name="username">
+        <label for="courriel"><b>Courriel</b></label>
+        <input type="text" placeholder="Entrer votre adresse courrie;" id="courriel" name="courriel">
     </div>
     <div>
-        <label for="password"><b>Mot de passe</b></label>
-        <input type="password" placeholder="Entrer votre mot de passe" id="password" , name="password">
+        <label for="mot_de_passe"><b>Mot de passe</b></label>
+        <input type="password" placeholder="Entrer votre mot de passe" id="mot_de_passe" , name="mot_de_passe">
     </div>
     <div>
         <button type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
+        {% if message_erreur %}
+            <label>{{ message_erreur }}</label>
+        {% endif %}
     </div>
 </form>
 
