Affichage de toutes les bières sur la page /biere. Non terminé.

--- a/templates/bieres.html
+++ b/templates/bieres.html
@@ -43,6 +43,27 @@
             </div>
         </div>
     </div>
+    <div class="row my-5">
+            {% for biere in bieresdispo %}
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <div class="card-body">
+                      <h4 class="card-title">
+                        <a href="#">{{ biere.nom }}</a>
+                      </h4>
+                      <h5>{{ biere.id_sorte }}</h5>
+                      <h6> Degré d'alcool:  {{ biere.pourcentage_alcool }}% IBU: {{ biere.ibu }}</h6>
+                      <p class="card-text"> </p>
+                      <h6> {{ biere.prix }}</h6>
+                    </div>
+                    <div class="card-footer">
+                      <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+    </div>
 {% endblock %}
 
 {% block scripts %}
