--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 <nav class="bande-couleur navbar navbar-expand-lg navbar-dark fixed-top py-0">
     <div class="container">
-        <a class="navbar-brand" href="#">Quebec Bieres</a>
+        <a class="navbar-brand" href="#">Quebec Micro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
