--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarMenu">
             <ul class="navbar-nav ml-auto">
                 <li id="bouton-accueil" class="nav-item">
-                    <a class="nav-link" href="/accueil">Accueil</a>
+                    <a class="nav-link" href="/">Accueil</a>
                 </li>
                 <li id="bouton-bieres" class="nav-item">
                     <a class="nav-link" href="/bieres">Bieres</a>
