Alignement des bières avec le menu de recherche

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/bieres">Bieres</a>
                 </li>
                 <li id="bouton-micros" class="nav-item">
-                    <a class="nav-link" href="#">Microbrasseries</a>
+                    <a class="nav-link" href="/Microbrasserie">Microbrasseries</a>
                 </li>
                 <li id="bouton-contacter" class="nav-item">
                     <a class="nav-link" href="#">Nous contacter</a>
