AUTO_INCREMENT pour les id

--- a/templates/microbrasserie.html
+++ b/templates/microbrasserie.html
@@ -33,5 +33,5 @@
 
 {% block scripts %}
     {{ super() }}
-    <script src="../static/js/bieres.js"></script>
+    <script src="../static/js/microbrasserie.js"></script>
 {% endblock %}
