--- a/templates/microbrasserie.html
+++ b/templates/microbrasserie.html
@@ -9,22 +9,23 @@
 
 {% block container %}
     <div class="row my-3">
-       <div class="col my-1">
+       <div class="col-lg-12">
            <div class="list-group">
+               <div class="row">
                {% for micros in micro %}
-               <a href="/Microbrasserie?id_microbrasserie={{ micros.id_utilisateur }}"></a>
-                   <div class="col-lg-6 md-8 mb-4">
+                   <div class="col-lg-6 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="http://placehold.it" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">{{ micros.nom }}</a>
-                                </h4>
-                                <h5>{{ micros.emplacement }}</h5>
-                            </div>
+                            <a href="/Microbrasserie?id_microbrasserie={{ micros.id_utilisateur }}"></a>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="#">{{ micros.nom }}</a>
+                                    </h4>
+                                    <h5> {{ micros.emplacement }}</h5>
+                                </div>
                         </div>
                    </div>
                {% endfor %}
+               </div>
            </div>
        </div>
     </div>
