Les bières affichent maintenant leur type lors de l'affichage

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="/nousContacter">Nous contacter</a>
                 </li>
                 <li id="bouton-panier" class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-fw fa-shopping-cart"></i>Panier</a>
+                    <a class="nav-link" href="/panier"><i class="fa fa-fw fa-shopping-cart"></i>Panier</a>
                 </li>
                 <li id="bouton-connexion" class="nav-item">
                     <a class="nav-link" href="/connexion"><i class="fa fa-fw fa-user"></i>Connexion</a>
