--- a/templates/bieres.html
+++ b/templates/bieres.html
@@ -57,12 +57,12 @@
                             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
                             <div class="card-body">
                                 <h4 class="card-title">
-                                    <a href="#">{{ biere.nom }}</a>
+                                    <a href="#">{{ biere.bnom }}</a>
                                 </h4>
-                                <h5>{{ biere.id_sorte }}</h5>
-                                <h6> Degré d'alcool: {{ biere.pourcentage_alcool }}% IBU: {{ biere.ibu }}</h6>
+                                <h5>{{ biere.snom }}</h5>
+                                <h6> Degré d'alcool: {{ biere.pa }}% IBU: {{ biere.ibu }}</h6>
                                 <p class="card-text"></p>
-                                <h6> {{ biere.prix }}</h6>
+                                <h6> {{ biere.prix }} $</h6>
                             </div>
                             <div class="card-footer">
                                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
