--- a/templates/nousContacter.html
+++ b/templates/nousContacter.html
@@ -50,5 +50,5 @@
 
 {% block scripts %}
     {{ super() }}
-    <script src="../static/js/bieres.js"></script>
+    <script src="../static/js/nouscontacter.js"></script>
 {% endblock %}
