--- a/templates/bieres.html
+++ b/templates/bieres.html
@@ -76,7 +76,8 @@
                                             </div>
                                         </div>
                                         <div class="col-4 p-0 text-center">
-                                            <input class="form-control text-center" type="number" name="quantite" min="1" value="1">
+                                            <input class="form-control text-center" type="number" name="quantite"
+                                                   min="1" value="1">
                                         </div>
                                         <div class="col-4 p-0 text-center">
                                             <button type="submit" class="btn bouton-ajout-panier">
