--- a/templates/nousContacter.html
+++ b/templates/nousContacter.html
@@ -11,37 +11,38 @@
     <div class="row my-1">
         <div class="col">
             <div class="form-group">
-                 <h3>Contacter nous</h3>
-                 <p>Remplisser le formulaire ci-dessous:</p>
+                <h3>Contacter nous</h3>
+                <p>Remplisser le formulaire ci-dessous:</p>
             </div>
             <div class="form-group">
-                 <form role="form" action="/nousContacter" method="get">
-                     <div class="form-group">
-                         <label name="nom">
-                             <span class="label-text">Nom:</span>
-                         </label>
-                         <input type="text" name="name" placeholder="Votre nom..." class="form-control">
-                     </div>
-                     <div class="form-group">
-                         <label name="email">
-                             <span class="label-text">Email:</span>
-                         </label>
-                         <input type="text" name="email" placeholder="Votre adresse email..." class="form-control">
-                     </div>
-                     <div class="form-group">
-                         <label name="sujet">
-                             <span class="label-text">Sujet:</span>
-                         </label>
-                         <input type="text" name="sujet" placeholder="Le sujet du message..." class="form-control">
-                     </div>
-                     <div class="form-group">
-                         <label name="message">
-                             <span class="label-text">Message:</span>
-                         </label>
-                         <textarea name="message" placeholder="Le texte de votre message..." class="form-control"></textarea>
-                     </div>
-                     <button type="submit" class="btn">Envoyer le message</button>
-                 </form>
+                <form role="form" action="/nousContacter" method="get">
+                    <div class="form-group">
+                        <label name="nom">
+                            <span class="label-text">Nom:</span>
+                        </label>
+                        <input type="text" name="name" placeholder="Votre nom..." class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label name="email">
+                            <span class="label-text">Email:</span>
+                        </label>
+                        <input type="text" name="email" placeholder="Votre adresse email..." class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label name="sujet">
+                            <span class="label-text">Sujet:</span>
+                        </label>
+                        <input type="text" name="sujet" placeholder="Le sujet du message..." class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label name="message">
+                            <span class="label-text">Message:</span>
+                        </label>
+                        <textarea name="message" placeholder="Le texte de votre message..."
+                                  class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Envoyer le message</button>
+                </form>
             </div>
         </div>
     </div>
