--- a/templates/panier.html
+++ b/templates/panier.html
@@ -22,7 +22,8 @@
         <tr>
             <td data-th="Bière">
                 <div class="row">
-                    <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+                    <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..."
+                                                         class="img-responsive"/></div>
                     <div class="col-sm-10">
                         <h4 class="nomargin">Nom</h4>
                         <p>Type, Provenance</p>
@@ -48,7 +49,8 @@
             <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continuer à magasiner</a></td>
             <td colspan="2" class="hidden-xs"></td>
             <td class="hidden-xs text-center"><strong>Total (Montant) $</strong></td>
-            <td><a href="#" class="btn btn-success btn-block">Passer à la caisse <i class="fa fa-angle-right"></i></a></td>
+            <td><a href="#" class="btn btn-success btn-block">Passer à la caisse <i class="fa fa-angle-right"></i></a>
+            </td>
         </tr>
         </tfoot>
     </table>
