--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,15 @@
                     <a class="nav-link" href="/nousContacter">Nous contacter</a>
                 </li>
                 <li id="bouton-panier" class="nav-item" )>
-                    <a class="nav-link" href="#"><i
+                    <a class="nav-link" href="/panier"><i
                             class="fa fa-fw fa-shopping-cart"></i>{{ '(' + utilisateur_courant['nombre_bieres']|string + ') Panier' if utilisateur_courant.get('nombre_bieres', 0) > 0 else "Panier" }}
                     </a>
                 </li>
                 <li id="bouton-connexion" class="nav-item">
                     <a class="nav-link" href="/connexion"><i class="fa fa-fw fa-user"></i>Connexion</a>
+                </li>
+                <li id="bouton-inscription" clas="nav-item">
+                    <a class="nav-link" href="/inscription"><i class="fa fa-fw fa-user"></i>S'inscrire</a>
                 </li>
             </ul>
         </div>
