--- a/templates/bieres.html
+++ b/templates/bieres.html
@@ -4,7 +4,7 @@
 
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" id="bootstrap-css" href="../static/css/bieres.css">
+    <link rel="stylesheet" href="../static/css/bieres.css">
 {% endblock %}
 
 {% block container %}
