--- a/templates/login-modal.html
+++ b/templates/login-modal.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-12">
-                        <button class="btn btn-default btn-block bouton-connexion" type="submit">Login</button>
+                        <button class="btn btn-default btn-block bouton" type="submit">Login</button>
                     </div>
                 </div>
                 <div class="row mb-2">
@@ -39,7 +39,7 @@
                         <a href="#">Mot de passe oublié</a>
                     </div>
                     <div class="col-6 text-right">
-                        <a href="#">S'inscrire</a>
+                        <a href="/inscription">S'inscrire</a>
                     </div>
                 </div>
             </form>
