--- a/templates/panier.html
+++ b/templates/panier.html
@@ -4,7 +4,7 @@
 
 {% block head %}
     {{ super() }}
-{#
+    {#
     <link rel="stylesheet" id="bootstrap-css" href="../static/css/bieres.css">
 #}
 {% endblock %}
@@ -21,38 +21,46 @@
         </tr>
         </thead>
         <tbody>
-        {% for biere in bierepanier %}
-        <tr>
-            <td data-th="Bière">
-                <div class="row">
-                    <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..."
-                                                         class="img-responsive"/></div>
-                    <div class="col-sm-10">
-                        <h4 class="nomargin"> {{ biere.bnom }}</h4>
-                        <p>{{ biere.snom }},{{ biere.mnom }}</p>
+        {% for id, biere in model['utilisateur_courant']['panier'].items() %}
+            <tr>
+                <td data-th="Bière">
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs text-center"><img src="{{ biere.image_url }}" alt="..."
+                                                                         class="img-responsive"
+                                                                         style="max-height: 100px;"/></div>
+                        <div class="col-sm-8">
+                            <h4 class="nomargin"> {{ biere.bnom }}</h4>
+                            <p>{{ biere.snom }},{{ biere.mnom }}</p>
+                        </div>
                     </div>
-                </div>
-            </td>
-            <td data-th="Prix">{{ biere.prix }}</td>
-            <td data-th="Quantity">
-                <input type="number" class="form-control text-center" value="{{ quantite }}">
-            </td>
-            <td data-th="Sous-total" class="text-center">Prix</td>
-            <td class="actions" data-th="">
-                <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
-                <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
-            </td>
-        </tr>
+                </td>
+                <td data-th="Prix">{{ biere.prix }} $</td>
+                <td data-th="Quantity">
+                    <input type="number" min="0" class="form-control text-center input-quantite"
+                           value="{{ biere.quantite }}">
+                </td>
+                <td data-th="Sous-total" class="text-center">{{ biere.prix * biere.quantite }} $</td>
+                <td class="actions" data-th="">
+                    <form class="update-panier" action="/update-panier" style="display: inline">
+                        <input type="hidden" name="id_biere" value="{{ id }}">
+                        <input class="quantite" type="hidden" name="quantite" value="{{ biere.quantite }}">
+                        <button type="submit" class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
+                    </form>
+                    <form class="update-panier" action="/update-panier" style="display:inline;">
+                        <input type="hidden" name="id_biere" value="{{ id }}">
+                        <input type="hidden" name="quantite" , value="0">
+                        <button type="submit" class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+                    </form>
+                </td>
+            </tr>
         {% endfor %}
         </tbody>
         <tfoot>
-        <tr class="visible-xs">
-            <td class="text-center"><strong>Total (Montant final) $</strong></td>
-        </tr>
         <tr>
-            <td><a href="/bieres" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continuer à magasiner</a></td>
-            <td colspan="2" class="hidden-xs"></td>
-            <td class="hidden-xs text-center"><strong>Total (Montant) $</strong></td>
+            <td><a href="/bieres" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continuer à magasiner</a>
+            </td>
+            <td colspan="2" class="hidden-xs text-center"><strong>Bières: {{ model['utilisateur_courant']['nombre_bieres'] }}</strong></td>
+            <td class="hidden-xs text-center"><strong>Total: {{ model['total_panier'] }} $</strong></td>
             <td><a href="#" class="btn btn-success btn-block">Passer à la caisse <i class="fa fa-angle-right"></i></a>
             </td>
         </tr>
