--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block titre %}Connexion{% endblock %}
+{% block titre %}Inscription{% endblock %}
 
 {% block head %}
     {{ super() }}
@@ -10,75 +10,108 @@
 {% block container %}
 
     <div class="row main">
-        <div class="main-login main-center">
-            <form class="form-horizontal" method="post" action="/inscription">
-                <h1> Inscription</h1>
-
-                <div class="form-group">
-                    <label for="prenom" class="cols-sm-2 control-label">Votre prénom</label>
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="prenom" id="prenom"  placeholder="Entrer votre nom"/>
-                        </div>
+        <div class="col">
+            <div class="form-group">
+                <h3>Inscrivez-vous</h3>
+                <p>Remplisser le formulaire ci-dessous:</p>
+            </div>
+            <div class="form-group">
+                <form role="form" action="/inscription" method="post">
+                    <div class="form-group">
+                        <label id="prenom">
+                            <span class="label-text">Prénom:</span>
+                        </label>
+                        <input type="text" name="prenom" placeholder="Entrez votre prénom" class="form-control">
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="nom" class="cols-sm-2 control-label">Votre nom de famille</label>
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="nom" id="nom"  placeholder="Entrer votre nom de famille"/>
-                        </div>
+                    <div class="form-group">
+                        <label id="nom">
+                            <span class="label-text">Nom:</span>
+                        </label>
+                        <input type="text" name="nom" placeholder="Entrez votre nom de famille" class="form-control">
                     </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label for="email" class="cols-sm-2 control-label">Votre courriel</label>
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="courriel" id="email"  placeholder="Entrer votre courriel"/>
-                        </div>
+                    <div class="form-group">
+                        <label id="email">
+                            <span class="label-text">Courriel:</span>
+                        </label>
+                        <input type="email" name="courriel" placeholder="Entrez votre adresse courriel" class="form-control">
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="motdepasse" class="cols-sm-2 control-label">Mot de passe</label>
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                            <input type="password" class="form-control" name="motdepasse" id="motdepasse"  placeholder="Entrer votre mot de passe"/>
-                        </div>
+                    <div class="form-group">
+                        <label id="ville">
+                            <span class="label-text">Ville:</span>
+                        </label>
+                        <input type="text" name="ville" placeholder="Entrez votre ville" class="form-control">
                     </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="confirmation" class="cols-sm-2 control-label">Confirmer votre mot de passe</label>
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                            <input type="password" class="form-control" name="confirmation" id="confirmation"  placeholder="Confirmer votre mot de passe"/>
-                        </div>
+                    <div class="form-group">
+                        <label id="adresse">
+                            <span class="label-text">Adresse:</span>
+                        </label>
+                        <input type="text" name="adresse" placeholder="Etrez votre adresse"
+                                  class="form-control"/>
                     </div>
-                </div>
-                <div class="form-group ">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block login-button">S'inscire</button>
-                </div>
-                <div class="login-register">
-                    <a href="/connexion">Login</a>
+                    <div class="form-group">
+                        <label id="age">
+                            <span class="label-text">Âge:</span>
+                        </label>
+                        <input type="text" name="age" placeholder="Entrez votre âge"
+                                  class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label id="telephone">
+                            <span class="label-text">Téléphone:</span>
+                        </label>
+                        <input type="text" name="telephone" placeholder="Entrez votre téléphone"
+                                  class="form-control"/>
+                    </div>
+                        <div class="form-group">
+                        <label id="motdepasse">
+                            <span class="label-text">Mot de passe:</span>
+                        </label>
+                        <input name="motdepasse" placeholder="Entrez votre mot de passe"
+                                  class="form-control" type="password"/>
+                    </div>
+                    <div class="form-group">
+                        <label id="confirmation">
+                            <span class="label-text">Confirmation du mot de passe:</span>
+                        </label>
+                        <input name="confirmation" placeholder="Entrez votre mot de passe"
+                                  class="form-control" type="password"/>
+                    </div>
+                    <div>
+                        <p>Si vous représentez une microbrasserie, veuillez remplir les champs suivants:</p>
+                    </div>
+                    <div class="form-group">
+                        <label id="nommicro">
+                            <span class="label-text">Nom de la microbrasserie:</span>
+                        </label>
+                        <input type="text" name="nommicro" placeholder="Entrez le nom de la microbrasserie"
+                                  class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label id="emplacement">
+                            <span class="label-text">Emplacement de la microbrasserie:</span>
+                        </label>
+                        <input type="text" name="emplacement" placeholder="Entrez l'emplacement de la microbrasserie ex:Saguenay"
+                                  class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label id="annee">
+                            <span class="label-text">Année d'inauguration:</span>
+                        </label>
+                        <input type="text" name="annee" placeholder="Entrez l'année d'inauguration de la microbrasserie"
+                                  class="form-control"/>
+                    </div>
+                    <div>
+                    <button type="submit" class="btn bouton">S'inscrire</button>
+                    </div>
                     <div>
                         {% if message_erreur %}
                         <label> {{ message_erreur }}</label>
                         {% endif %}
-
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-
 {% endblock %}
 
 {% block scripts %}
