--- a/templates/nous-contacter.html
+++ b/templates/nous-contacter.html
@@ -6,7 +6,7 @@
     <div class="row my-1">
         <div class="col">
             <div class="form-group">
-                <h3>Contacter nous</h3>
+                <h3>Contactez-nous</h3>
                 <p>Remplisser le formulaire ci-dessous:</p>
             </div>
             <div class="form-group">
